fix markdown comment wrt cell content

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -452,7 +452,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "data": {
@@ -1010,7 +1012,7 @@
     "    link_height_width=True,\n",
     ")\n",
     "\n",
-    "stats.head(20)\n"
+    "stats.head(20)"
    ]
   },
   {
@@ -1023,13 +1025,15 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [],
    "source": [
     "stats.index = stats.index.set_levels(\n",
     "    stats.index.levels[stats.index.names.index(\"width\")] ** 2, level=\"width\"\n",
     ")\n",
-    "stats.index = stats.index.rename(\"size\", level=\"width\")\n"
+    "stats.index = stats.index.rename(\"size\", level=\"width\")"
    ]
   },
   {
@@ -1072,17 +1076,19 @@
     "- `width` (renamed `size`)\n",
     "- `mud_density`.\n",
     "\n",
-    "We can declare `lines=size`, so we have one line for each mud density.\n",
+    "We can declare `lines=size`, so we have one line for each size of the graph.\n",
     "\n",
-    "It remains `width` and `rat`, so one of them need to be fixed as a keyword argument, e.g. `rat=\"lab4_dijkstra\"`.\n",
+    "It remains `mud_density` and `rat`, so one of them need to be fixed as a keyword argument, e.g. `rat=\"lab4_dijkstra\"`.\n",
     "\n",
-    "The last one is `width`, it will be used as an x axis to plot the `variable=\"prep_time_rat\"` against."
+    "The last one is `mud_density`, it will be used as an x axis to plot the `variable=\"prep_time_rat\"` against."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "lines_to_next_cell": 2
+   },
    "outputs": [
     {
      "data": {
@@ -1116,7 +1122,7 @@
     "    variable=\"prep_time_rat\",\n",
     "    lines=\"size\",\n",
     "    rat=\"lab4_dijkstra\",\n",
-    "    ax = axes[0],\n",
+    "    ax=axes[0],\n",
     ")\n",
     "\n",
     "# Check that dijkstra get less stuck than BFS\n",
@@ -1126,7 +1132,7 @@
     "    lines=\"rat\",\n",
     "    size=81,\n",
     "    ax=axes[1],\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -1163,10 +1169,10 @@
     }
    ],
    "source": [
-    "fig, axes = plt.subplots(nrows = 2, ncols=2, figsize=(20, 10))\n",
+    "fig, axes = plt.subplots(nrows=2, ncols=2, figsize=(20, 10))\n",
     "\n",
     "variable = \"prep_time_rat\"\n",
-    "lines=\"rat\"\n",
+    "lines = \"rat\"\n",
     "\n",
     "# Compare with \"mud_density\" fixed\n",
     "comparison_plot(stats, variable=variable, lines=lines, mud_density=0.0, ax=axes[0, 0])\n",
